--- a/ShellDLL/ShellDLL.vcxproj.filters
+++ b/ShellDLL/ShellDLL.vcxproj.filters
@@ -150,6 +150,9 @@
     <None Include="newhost.ico">
       <Filter>リソース ファイル</Filter>
     </None>
+    <None Include="..\Common.props" />
+    <None Include="..\Common.user.props" />
+    <None Include="..\Common.user.sample.props" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Auth.h">
