Add larger icons for high DPI and some implementations for Monitor-aware DPI (but disabled at now)

--- a/EasySFTP/EasySFTP.vcxproj.filters
+++ b/EasySFTP/EasySFTP.vcxproj.filters
@@ -119,4 +119,12 @@
   <ItemGroup>
     <Manifest Include="EasySFTP.exe.manifest" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="toolbar_l.bmp">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+    <Image Include="AddrBtns_L.bmp">
+      <Filter>リソース ファイル</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
