--- a/Common/Common.vcxproj.filters
+++ b/Common/Common.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClInclude Include="UString.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Lock.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
