Divide Folder.cpp/Folder.h into several files

--- a/ShellDLL/ShellDLL.vcxproj
+++ b/ShellDLL/ShellDLL.vcxproj
@@ -208,8 +208,13 @@
     <ClCompile Include="CsetPage.cpp" />
     <ClCompile Include="DIMalloc.cpp" />
     <ClCompile Include="DragData.cpp" />
+    <ClCompile Include="EnmIDLst.cpp" />
+    <ClCompile Include="EnmStstg.cpp" />
     <ClCompile Include="ExBuffer.cpp" />
+    <ClCompile Include="FileDisp.cpp" />
+    <ClCompile Include="FileIcon.cpp" />
     <ClCompile Include="FileList.cpp" />
+    <ClCompile Include="FileProp.cpp" />
     <ClCompile Include="FileStrm.cpp" />
     <ClCompile Include="FldrMenu.cpp" />
     <ClCompile Include="FNameDlg.cpp" />
@@ -217,9 +222,11 @@
     <ClCompile Include="FoldDrop.cpp" />
     <ClCompile Include="Folder.cpp" />
     <ClCompile Include="FoldItem.cpp" />
+    <ClCompile Include="FoldRoot.cpp" />
     <ClCompile Include="FTPConn.cpp" />
     <ClCompile Include="FTPFldr.cpp" />
     <ClCompile Include="FTPMsg.cpp" />
+    <ClCompile Include="FTPStrm.cpp" />
     <ClCompile Include="Func.cpp" />
     <ClCompile Include="HostPage.cpp" />
     <ClCompile Include="LinkDlg.cpp" />
@@ -263,17 +270,25 @@
     <ClInclude Include="Connect.h" />
     <ClInclude Include="DIMalloc.h" />
     <ClInclude Include="DragData.h" />
+    <ClInclude Include="EnmIDLst.h" />
+    <ClInclude Include="EnmStstg.h" />
     <ClInclude Include="ExBuffer.h" />
+    <ClInclude Include="FileDisp.h" />
+    <ClInclude Include="FileIcon.h" />
     <ClInclude Include="FileList.h" />
+    <ClInclude Include="FileProp.h" />
     <ClInclude Include="FileStrm.h" />
     <ClInclude Include="FldrMenu.h" />
     <ClInclude Include="FNameDlg.h" />
+    <ClInclude Include="FoldBase.h" />
     <ClInclude Include="FoldDrop.h" />
     <ClInclude Include="Folder.h" />
     <ClInclude Include="FoldItem.h" />
+    <ClInclude Include="FoldRoot.h" />
     <ClInclude Include="FTPConn.h" />
     <ClInclude Include="FTPFldr.h" />
     <ClInclude Include="FTPMsg.h" />
+    <ClInclude Include="FTPStrm.h" />
     <ClInclude Include="Func.h" />
     <ClInclude Include="HostPage.h" />
     <ClInclude Include="LinkDlg.h" />
@@ -295,6 +310,7 @@
     <ClInclude Include="SvInfo.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TextStrm.h" />
+    <ClInclude Include="TferStat.h" />
     <ClInclude Include="Transfer.h" />
     <ClInclude Include="WinOpSSH.h" />
   </ItemGroup>
