Update version to 0.11.0.1

--- a/Common/Common.vcxproj.filters
+++ b/Common/Common.vcxproj.filters
@@ -122,5 +122,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
+    <None Include="..\.gitignore" />
   </ItemGroup>
 </Project>
