--- a/Common/Common.vcxproj
+++ b/Common/Common.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="UString.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.gitignore" />
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
