--- a/EasySFTP/EasySFTP.vcxproj.filters
+++ b/EasySFTP/EasySFTP.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Option.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="..\ShellDLL\EasySFTP_i.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AddrCBox.h">
