--- a/ShellDLL/ShellDLL.vcxproj
+++ b/ShellDLL/ShellDLL.vcxproj
@@ -323,6 +323,7 @@ exit /b 0
     <ClCompile Include="FTPConn.cpp" />
     <ClCompile Include="FTPFldr.cpp" />
     <ClCompile Include="FTPMsg.cpp" />
+    <ClCompile Include="FTPSock.cpp" />
     <ClCompile Include="FTPStrm.cpp" />
     <ClCompile Include="Func.cpp" />
     <ClCompile Include="HostPage.cpp" />
@@ -389,6 +390,7 @@ exit /b 0
     <ClInclude Include="FTPConn.h" />
     <ClInclude Include="FTPFldr.h" />
     <ClInclude Include="FTPMsg.h" />
+    <ClInclude Include="FTPSock.h" />
     <ClInclude Include="FTPStrm.h" />
     <ClInclude Include="Func.h" />
     <ClInclude Include="HostPage.h" />
